--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-fileupload": "^1.4.3",
     "express-route-grouping": "^1.1.2",
     "express-validator": "^6.14.1",
+    "geolib": "^3.3.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.12.7",
     "mongoose-paginate-v2": "^1.8.0",
@@ -33,12 +34,12 @@
     "node-cron": "^3.0.3",
     "node-input-validator": "^4.5.1",
     "nodemailer": "^6.9.13",
+    "nodemon": "^2.0.16",
     "redis": "^4.6.15",
     "sharp": "^0.33.5",
-    "winston": "^3.13.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "nodemon": "^2.0.16",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
