--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bull": "^4.12.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.18",
     "dotenv": "^16.0.1",
     "express": "^4.19.2",
     "express-fileupload": "^1.4.3",
